# ism-python-setup

./: README.md  pyproject.toml
notebooks/: example.ipynb
